######################################################################
## Filename:      Makefile.am
## Version:       
##                
## Author:        Bright Pan <loststriker@gmail.com>
## Created at:    Fri Apr 15 14:58:06 2011
##                
##                
## Modified by:   Bright Pan <loststriker@gmail.com>
## Modified at:   Wed May  4 14:58:11 2011
##                
## Description:   for bsp directory
## Copyright (C) 2010-2011,  Bright Pan
######################################################################

SUBDIRS = system interrupt init led calender signal sflash temperature gsm
